# libgit2ppp

./: .gitignore  CMakeLists.txt
cmake/Modules/: FindLibgit2.cmake
examples/: CMakeLists.txt  config.cpp
include/git2ppp/: common.hpp  config.hpp  error.hpp  error_store.hpp  exception.hpp  interface.hpp  library.hpp  repository.hpp
src/: config.cpp  config.hpp  config_impl.cpp  config_impl.hpp  error.cpp  error.hpp  error_store.cpp  error_store.hpp  exception.cpp  interface.cpp  library.cpp  memory.hpp  repository.cpp  repository.hpp  repository_impl.cpp  repository_impl.hpp
