CMAKE_MINIMUM_REQUIRED(VERSION 2.8.10)
PROJECT(libgit2ppp)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")
FIND_PACKAGE(Libgit2 REQUIRED)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -std=c++11")
SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)

INCLUDE_DIRECTORIES(include)
AUX_SOURCE_DIRECTORY(src libgit2ppp_SOURCES)
ADD_LIBRARY(${PROJECT_NAME} SHARED ${libgit2ppp_SOURCES})

INCLUDE(CPack)
